# vpn_detector

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
scripts/: test.bat  test.py  test.sh
tests/: __init__.py  test_detector.py
vpn_detector/: __init__.py  detector.py
