[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-detector"
version = "1.0.0"
description = "A simple Python package to detect active VPN connections"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.7"
dependencies = [
    "psutil>=5.0.0"
]
keywords = ["vpn", "network", "detection", "connection", "monitoring"]

[project.urls]
Homepage = "https://github.com/yourusername/vpn_detector"
"Bug Reports" = "https://github.com/yourusername/vpn_detector/issues"
"Source" = "https://github.com/yourusername/vpn_detector"